delete not needed scripts - faster loading time

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,13 @@
   <meta charset="utf-8">
   <title>ProjektROLA</title>
   <base href="/">
-  <link rel="stylesheet" href="assets/css/quill.bubble.css" type="text/css" />
-  <link rel="stylesheet" href="assets/css/quill.snow.css" type="text/css" />
-  <link rel="stylesheet" href="assets/css/quill.core.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
-  <script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>
+  <!--<script type="text/javascript" src="assets/js/jquery-3.3.1.min.js"></script>-->
   <!--<script type="text/javascript" src="assets/js/popper.min.js"></script>-->
   <script type="text/javascript" src="assets/js/bootstrap.bundle.js"></script>
 </body>
